Fixes for link scrolling/overflow

--- a/src/content/app.styl
+++ b/src/content/app.styl
@@ -10,6 +10,7 @@ POP_EASING = cubic-bezier(0.075, 0.82, 0.165, 1)
   z-index 10000
   width 340px
   top 50px
+  max-height calc(100vh - 50px)
   right 0
   bottom 0
   border-left 1px solid lightgrey
@@ -119,6 +120,8 @@ POP_EASING = cubic-bezier(0.075, 0.82, 0.165, 1)
     display flex
     flex-direction column
     flex-grow 1
+    flex-basis 0
+    overflow auto
 
     &.hidden .link-list.hidden .path a
       color GREY !important;
@@ -130,7 +133,8 @@ POP_EASING = cubic-bezier(0.075, 0.82, 0.165, 1)
     display flex
     flex-direction column
     flex-grow 1
-    overflow scroll
+    overflow-x hidden
+    overflow-y auto
     padding-bottom 20px
 
   .link-list
